--- a/main.html
+++ b/main.html
@@ -7,7 +7,27 @@
 </head>
 
 <body>
+	<style>
+		blockquote{
+			max-width:600px;
+			margin:10px;
+			padding:15px;
+			border-left:8px solid green;
+			background-color:#f8fffe;
+			font-weight:bold;
+		}
+	</style>
 	<!-- the entire body must be written by student -->
+	<h4>What is the captial of India?</h4>
+	<input type="radio" name="option">New Delhi</input>
+	<br>
+	<input type="radio" name="option">Mumbai</input>
+	<blockquote>
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
