--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		}
 	</style>
 	<!-- the entire body must be written by student -->
-	<h4>What is the captial of India?</h4>
+	<h4>What is the capital of India?</h4>
 	<input type="radio" name="option">New Delhi</input>
 	<br>
 	<input type="radio" name="option">Mumbai</input>
