--- a/main.html
+++ b/main.html
@@ -18,10 +18,16 @@
 		}
 	</style>
 	<!-- the entire body must be written by student -->
-	<h4>What is the capital of India?</h4>
-	<input type="radio" name="option">New Delhi</input>
+	<h3>What is the capital of India?</h3>
+	<lable>
+		<input type="radio" name="capital" value="new-delhi">
+		New Delhi
+	</lable>
 	<br>
-	<input type="radio" name="option">Mumbai</input>
+	<lable>
+		<input type="radio" name="capital" value="mumbai">
+		Mumbai
+	</lable>
 	<blockquote>
 		New Delhi is the capital of India and an administrative district of NCT Delhi.
 	</blockquote>
