--- a/main.html
+++ b/main.html
@@ -8,31 +8,33 @@
 
 <body>
 	<style>
-		blockquote{
-			max-width:600px;
-			margin:10px;
-			padding:15px;
-			border-left:8px solid green;
-			background-color:#f8fffe;
-			font-weight:bold;
-		}
-	</style>
-	<!-- the entire body must be written by student -->
-	<h3>What is the capital of India?</h3>
-	<lable>
-		<input type="radio" name="capital" value="new-delhi">
-		New Delhi
-	</lable>
-	<br>
-	<lable>
-		<input type="radio" name="capital" value="mumbai">
-		Mumbai
-	</lable>
-	<blockquote>
-		New Delhi is the capital of India and an administrative district of NCT Delhi.
-	</blockquote>
+    blockquote {
+      max-width: 600px;
+      margin: 10px;
+      padding: 15px;
+      border-left: 8px solid green;
+      background-color: #f8fffe;
+      font-weight: bold;
+    }
+  </style>
 
+  <!-- the entire body must be written by student -->
+  <h3>What is the capital of India?</h3>
 
+  <label>
+    <input type="radio" name="capital" value="new-delhi">
+    New Delhi
+  </label>
+  <br>
+
+  <label>
+    <input type="radio" name="capital" value="mumbai">
+    Mumbai
+  </label>
+
+  <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
+  </blockquote>
 	
     <script type="text/javascript" src="./script.js">
 </script>
